src/test/ui/issues/issue-39616.rs
fn foo(a: [0; 1]) {} //~ ERROR expected type, found `0`
//~| ERROR expected `;` or `{`, found `]`

fn main() {}
